[project]
authors = [{name = "Ryan Volz", email = "rvolz@mit.edu"}]
dependencies = ["anywidget>=0.11", "numpy"]
name = "maia_waterfall_widget"
requires-python = ">= 3.11"
version = "0.1.0"
readme = "README.md"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-jupyter-builder>=0.5.0"]

[dependency-groups]
dev = ["watchfiles", "jupyterlab", "pillow", "paho-mqtt"]

[tool.hatch.build]
only-packages = true
artifacts = ["src/maia_waterfall_widget/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/maia_waterfall_widget/static/widget.js"]
skip-if-exists = ["src/maia_waterfall_widget/static/widget.js"]
# dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
