[package]
name = "maia-waterfall-widget-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Ryan Volz <rvolz@mit.edu>"]
description = "Maia SDR waterfall widget WebAssembly bindings"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
jpeg-decoder = { version = "0.3", default-features = false }
js-sys = "0.3"
paste = "1"
maia-wasm = { git = "https://github.com/ryanvolz/maia-sdr.git", branch = "waterfall-custom" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.72"
features = [
  'HtmlCanvasElement',
]

[profile.release]
codegen-units = 1
lto = true
